# portside-security

./: .gitignore  LICENSE  README.md  a.sh  app.py  camera.py  cameras.json  constants.py  context.py  gui.py  logger.py  logging-config.json  model.py  nvr.json  nvr.py  pyproject.toml  requirements.txt  test.py
